Update gradle wrapper add class-for-name fix compress